# tello-ros

./: .gitignore  .pylintrc  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/tellobot/share/tellobot/: package.sh
log/: latest_build
src/cv_basics/: package.xml  setup.py
src/cv_basics/cv_basics/: webcam_pub.py  webcam_sub.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/cv_basics/lib/cv_basics/: img_publisher
src/install/cv_basics/share/cv_basics/: package.ps1  package.sh  package.xml
src/install/tellobot/lib/tellobot/: ai_node  camera_node  camera_pub_node  drone_node  gui_buttons_node  gui_camera_node  gui_node  (+1 more)
src/log/: latest_build
src/tellobot/: package.xml  setup.cfg  setup.py
src/tellobot/launch/: basic.launch.py  basic_launch.py  camera_playback.launch.py  tello.launch.py  tello_camera.launch.py
src/tellobot/tellobot/: .gitignore  ai.py  ai_constants.py  ai_node.py  camera_node.py  camera_pub_node.py  cmds.py  colors.py  drone_node.py  fake_drone.py  fake_tello.py  gui.py  gui_buttons.py  gui_buttons_node.py  gui_camera.py  gui_camera_node.py  gui_constants.py  gui_node.py  hardware_constants.py  object_detection.py  object_detection_node.py  pose_ml.py  pose_ml_node.py  resolutions.py  take_picture_service_node.py  tello_camera.py  tello_drone.py  web_camera.py
src/tellobot/tellobot/h264decoder/: CMakeCache.txt
src/tellobot/tellobot/model/: getModels.sh
src/tellobot_interfaces/: CMakeLists.txt  package.xml
src/tellobot_interfaces/msg/: DroneInfo.msg
(+7 files in other folders)
