<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tellobot</name>
  <version>0.0.0</version>
  <description>Tello robot</description>
  <maintainer email="peter@labone.tech">peterchau</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>opencv2</depend>
  <depend>h264decoder</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
